include/wtf.h


typedef struct wtf_context wtf_context_t;
typedef struct wtf_server wtf_server_t;
typedef struct wtf_session wtf_session_t;
typedef struct wtf_stream wtf_stream_t;
typedef enum {
    WTF_EXECUTION_PROFILE_LOW_LATENCY = 0,     
    WTF_EXECUTION_PROFILE_MAX_THROUGHPUT = 1,  
    WTF_EXECUTION_PROFILE_REAL_TIME = 2,       
    WTF_EXECUTION_PROFILE_SCAVENGER = 3        
} wtf_execution_profile_t;
typedef enum {
    WTF_SUCCESS = 0,
    WTF_ERROR_INVALID_PARAMETER,
    WTF_ERROR_OUT_OF_MEMORY,
    WTF_ERROR_INTERNAL,
    WTF_ERROR_CONNECTION_ABORTED,
    WTF_ERROR_STREAM_ABORTED,
    WTF_ERROR_INVALID_STATE,
    WTF_ERROR_BUFFER_TOO_SMALL,
    WTF_ERROR_NOT_FOUND,
    WTF_ERROR_REJECTED,
    WTF_ERROR_TIMEOUT,
    WTF_ERROR_TLS_HANDSHAKE_FAILED,
    WTF_ERROR_PROTOCOL_VIOLATION,
    WTF_ERROR_FLOW_CONTROL
} wtf_result_t;
typedef enum {
    WTF_LOG_LEVEL_TRACE = 0,     
    WTF_LOG_LEVEL_DEBUG = 1,     
    WTF_LOG_LEVEL_INFO = 2,      
    WTF_LOG_LEVEL_WARN = 3,      
    WTF_LOG_LEVEL_ERROR = 4,     
    WTF_LOG_LEVEL_CRITICAL = 5,  
    WTF_LOG_LEVEL_NONE = 6       
} wtf_log_level_t;
typedef enum {
    WTF_SERVER_STOPPED,    
    WTF_SERVER_STARTING,   
    WTF_SERVER_LISTENING,  
    WTF_SERVER_STOPPING    
} wtf_server_state_t;
typedef enum {
    WTF_SESSION_HANDSHAKING,  
    WTF_SESSION_CONNECTED,    
    WTF_SESSION_DRAINING,     
    WTF_SESSION_CLOSED        
} wtf_session_state_t;
typedef enum {
    WTF_STREAM_OPEN,     
    WTF_STREAM_CLOSING,  
    WTF_STREAM_CLOSED    
} wtf_stream_state_t;
typedef enum {
    WTF_STREAM_BIDIRECTIONAL = 0,  
    WTF_STREAM_UNIDIRECTIONAL = 1  
} wtf_stream_type_t;
typedef enum {
    WTF_CONNECTION_ACCEPT,  
    WTF_CONNECTION_REJECT   
} wtf_connection_decision_t;
typedef enum {
    WTF_DATAGRAM_SEND_UNKNOWN = 0,  
    WTF_DATAGRAM_SEND_SENT = 1,
    WTF_DATAGRAM_SEND_LOST_SUSPECTED = 2,
    WTF_DATAGRAM_SEND_LOST_DISCARDED = 3,
    WTF_DATAGRAM_SEND_ACKNOWLEDGED = 4,
    WTF_DATAGRAM_SEND_ACKNOWLEDGED_SPURIOUS = 5,
    WTF_DATAGRAM_SEND_CANCELED = 6
} wtf_datagram_send_state_t;
typedef enum {
    WTF_SESSION_EVENT_CONNECTED,                   
    WTF_SESSION_EVENT_DISCONNECTED,                
    WTF_SESSION_EVENT_DRAINING,                    
    WTF_SESSION_EVENT_STREAM_OPENED,               
    WTF_SESSION_EVENT_DATAGRAM_SEND_STATE_CHANGE,  
    WTF_SESSION_EVENT_DATAGRAM_RECEIVED,           
} wtf_session_event_type_t;
typedef enum {
    WTF_STREAM_EVENT_DATA_RECEIVED,  
    WTF_STREAM_EVENT_SEND_COMPLETE,  
    WTF_STREAM_EVENT_PEER_CLOSED,    
    WTF_STREAM_EVENT_CLOSED,         
    WTF_STREAM_EVENT_ABORTED         
} wtf_stream_event_type_t;
typedef struct {
    uint32_t length;  
    uint8_t* data;    
} wtf_buffer_t;
typedef struct {
    const char* name;   
    const char* value;  
} wtf_http_header_t;
typedef struct {
    const char* origin;                
    const char* path;                  
    const char* authority;             
    const wtf_http_header_t* headers;  
    size_t header_count;               
    void* peer_address;                
    size_t address_length;             
} wtf_connection_request_t;
typedef struct {
    wtf_session_event_type_t type;  
    wtf_session_t* session;         
    void* user_context;             
    union {
        struct {
            uint32_t error_code;  
            const char* reason;   
        } disconnected;
        struct {
            wtf_stream_t* stream;           
            wtf_stream_type_t stream_type;  
        } stream_opened;
        struct {
            wtf_buffer_t* buffers;            
            uint32_t buffer_count;            
            wtf_datagram_send_state_t state;  
        } datagram_send_state_changed;
        struct {
            const uint32_t length;  
            const uint8_t* data;    
        } datagram_received;
    };
} wtf_session_event_t;
typedef struct {
    wtf_stream_event_type_t type;  
    wtf_stream_t* stream;          
    void* user_context;            
    union {
        struct {
            wtf_buffer_t* buffers;  
            uint32_t buffer_count;  
            bool fin;               
        } data_received;
        struct {
            wtf_buffer_t* buffers;  
            uint32_t buffer_count;  
            bool cancelled;         
        } send_complete;
        struct {
            uint32_t error_code;  
        } aborted;
    };
} wtf_stream_event_t;
typedef wtf_connection_decision_t (*wtf_connection_validator_t)(
    const wtf_connection_request_t* request, void* user_context);
typedef void (*wtf_session_callback_t)(const wtf_session_event_t* event);
typedef void (*wtf_stream_callback_t)(const wtf_stream_event_t* event);
typedef void (*wtf_log_callback_t)(wtf_log_level_t level, const char* component, const char* file,
                                   int line, const char* message, void* user_context);
typedef enum {
    WTF_CERT_TYPE_NONE,            
    WTF_CERT_TYPE_FILE,            
    WTF_CERT_TYPE_FILE_PROTECTED,  
    WTF_CERT_TYPE_HASH,            
    WTF_CERT_TYPE_HASH_STORE,      
    WTF_CERT_TYPE_CONTEXT,         
    WTF_CERT_TYPE_PKCS12,          
} wtf_certificate_type_t;
typedef struct {
    wtf_certificate_type_t cert_type;  
    union {
        struct {
            const char* cert_path;  
            const char* key_path;   
        } file;
        struct {
            const char* cert_path;  
            const char* key_path;   
            const char* password;   
        } protected_file;
        struct {
            const char* thumbprint;  
        } hash;
        struct {
            const char* thumbprint;  
            const char* store_name;  
        } hash_store;
        struct {
            const void* data;      
            size_t data_size;      
            const char* password;  
        } pkcs12;
        void* context;  
    } cert_data;
    const char* principal;     
    const char* ca_cert_file;  
} wtf_certificate_config_t;
typedef struct {
    const char* host;                       
    uint16_t port;                          
    wtf_certificate_config_t* cert_config;  
    uint32_t max_sessions_per_connection;  
    uint32_t max_streams_per_session;      
    uint64_t max_data_per_session;         
    uint32_t idle_timeout_ms;       
    uint32_t handshake_timeout_ms;  
    bool enable_0rtt;       
    bool enable_migration;  
    wtf_connection_validator_t connection_validator;  
    wtf_session_callback_t session_callback;          
    void* user_context;                               
} wtf_server_config_t;
typedef struct {
    wtf_log_level_t log_level;                  
    wtf_log_callback_t log_callback;            
    void* log_user_context;                     
    uint32_t worker_thread_count;               
    bool enable_load_balancing;                 
    bool disable_encryption;                    
    wtf_execution_profile_t execution_profile;  
} wtf_context_config_t;
typedef struct {
    uint32_t major;       
    uint32_t minor;       
    uint32_t patch;       
    const char* version;  
} wtf_version_info_t;
WTF_API wtf_version_info_t* wtf_get_version();
WTF_API void* wtf_malloc(size_t n);
WTF_API void wtf_free(void* p);
WTF_API wtf_result_t wtf_context_create(const wtf_context_config_t* config,
                                        wtf_context_t** context);
WTF_API void wtf_context_destroy(wtf_context_t* context);
WTF_API wtf_result_t wtf_context_set_log_level(wtf_context_t* context, wtf_log_level_t level);
WTF_API wtf_result_t wtf_server_create(wtf_context_t* context, const wtf_server_config_t* config,
                                       wtf_server_t** server);
WTF_API wtf_result_t wtf_server_start(wtf_server_t* server);
WTF_API wtf_result_t wtf_server_stop(wtf_server_t* server);
WTF_API wtf_server_state_t wtf_server_get_state(wtf_server_t* server);
WTF_API void wtf_server_destroy(wtf_server_t* server);
WTF_API wtf_result_t wtf_session_close(wtf_session_t* session, uint32_t error_code,
                                       const char* reason);
WTF_API wtf_result_t wtf_session_drain(wtf_session_t* session);
WTF_API wtf_result_t wtf_session_send_datagram(wtf_session_t* session, const wtf_buffer_t* buffers,
                                               uint32_t buffer_count);
WTF_API wtf_result_t wtf_session_create_stream(wtf_session_t* session, wtf_stream_type_t type,
                                               wtf_stream_t** stream);
WTF_API wtf_session_state_t wtf_session_get_state(wtf_session_t* session);
WTF_API wtf_result_t wtf_session_get_peer_address(wtf_session_t* session, void* address_buffer,
                                                  size_t* buffer_size);
WTF_API void wtf_session_set_context(wtf_session_t* session, void* user_context);
WTF_API void* wtf_session_get_context(wtf_session_t* session);
WTF_API wtf_result_t wtf_stream_send(wtf_stream_t* stream, const wtf_buffer_t* buffers,
                                     uint32_t buffer_count, bool fin);
WTF_API wtf_result_t wtf_stream_close(wtf_stream_t* stream);
WTF_API wtf_result_t wtf_stream_abort(wtf_stream_t* stream, uint32_t error_code);
WTF_API wtf_result_t wtf_stream_get_id(wtf_stream_t* stream, uint64_t* stream_id);
WTF_API void wtf_stream_set_callback(wtf_stream_t* stream, wtf_stream_callback_t callback);
WTF_API void wtf_stream_set_context(wtf_stream_t* stream, void* user_context);
WTF_API void* wtf_stream_get_context(wtf_stream_t* stream);
WTF_API wtf_stream_type_t wtf_stream_get_type(wtf_stream_t* stream);
WTF_API wtf_stream_state_t wtf_stream_get_state(wtf_stream_t* stream);
WTF_API wtf_result_t wtf_stream_set_priority(wtf_stream_t* stream, uint16_t priority);
WTF_API wtf_result_t wtf_stream_set_receive_enabled(wtf_stream_t* stream, bool enabled);
WTF_API wtf_stream_t* wtf_session_find_stream_by_id(wtf_session_t* session, uint64_t stream_id);