csharp/Native/Native.cs


            [FieldOffset(0)]
            [NativeTypeName("__AnonymousRecord_wtf_L348_C9")]
            public _protected_file_e__Struct protected_file;

            [FieldOffset(0)]
            [NativeTypeName("__AnonymousRecord_wtf_L355_C9")]
            public _hash_e__Struct hash;

            [FieldOffset(0)]
            [NativeTypeName("__AnonymousRecord_wtf_L360_C9")]
            public _hash_store_e__Struct hash_store;

            [FieldOffset(0)]
            [NativeTypeName("__AnonymousRecord_wtf_L366_C9")]
            public _pkcs12_e__Struct pkcs12;

            [FieldOffset(0)]
            public void* context;

            public unsafe partial struct _file_e__Struct
            {
                [NativeTypeName("const char *")]
                public sbyte* cert_path;

                [NativeTypeName("const char *")]
                public sbyte* key_path;
            }

            public unsafe partial struct _protected_file_e__Struct
            {
                [NativeTypeName("const char *")]
                public sbyte* cert_path;

                [NativeTypeName("const char *")]
                public sbyte* key_path;

                [NativeTypeName("const char *")]
                public sbyte* password;
            }

            public unsafe partial struct _hash_e__Struct
            {
                [NativeTypeName("const char *")]
                public sbyte* thumbprint;
            }

            public unsafe partial struct _hash_store_e__Struct
            {
                [NativeTypeName("const char *")]
                public sbyte* thumbprint;

                [NativeTypeName("const char *")]
                public sbyte* store_name;
            }

            public unsafe partial struct _pkcs12_e__Struct
            {
                [NativeTypeName("const void *")]
                public void* data;

                [NativeTypeName("size_t")]
                public nuint data_size;

                [NativeTypeName("const char *")]
                public sbyte* password;
            }
        }
    }

    public unsafe partial struct wtf_server_config_t
    {
        [NativeTypeName("const char *")]
        public sbyte* host;

        [NativeTypeName("uint16_t")]
        public ushort port;

        public wtf_certificate_config_t* cert_config;

        [NativeTypeName("uint32_t")]
        public uint max_sessions_per_connection;

        [NativeTypeName("uint32_t")]
        public uint max_streams_per_session;

        [NativeTypeName("uint64_t")]
        public ulong max_data_per_session;

        [NativeTypeName("uint32_t")]
        public uint idle_timeout_ms;

        [NativeTypeName("uint32_t")]
        public uint handshake_timeout_ms;

        [NativeTypeName("_Bool")]
        public byte enable_0rtt;

        [NativeTypeName("_Bool")]
        public byte enable_migration;

        [NativeTypeName("wtf_connection_validator_t")]
        public delegate* unmanaged[Cdecl]<wtf_connection_request_t*, void*, wtf_connection_decision_t> connection_validator;

        [NativeTypeName("wtf_session_callback_t")]
        public delegate* unmanaged[Cdecl]<wtf_session_event_t*, void> session_callback;

        public void* user_context;
    }

    public unsafe partial struct wtf_context_config_t
    {
        public wtf_log_level_t log_level;

        [NativeTypeName("wtf_log_callback_t")]
        public delegate* unmanaged[Cdecl]<wtf_log_level_t, sbyte*, sbyte*, int, sbyte*, void*, void> log_callback;

        public void* log_user_context;

        [NativeTypeName("uint32_t")]
        public uint worker_thread_count;

        [NativeTypeName("_Bool")]
        public byte enable_load_balancing;

        [NativeTypeName("_Bool")]
        public byte disable_encryption;

        public wtf_execution_profile_t execution_profile;
    }

    public unsafe partial struct wtf_version_info_t
    {
        [NativeTypeName("uint32_t")]
        public uint major;

        [NativeTypeName("uint32_t")]
        public uint minor;

        [NativeTypeName("uint32_t")]
        public uint patch;

        [NativeTypeName("const char *")]
        public sbyte* version;
    }

    public static unsafe partial class Methods
    {
        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_version_info_t* wtf_get_version();

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void* wtf_malloc([NativeTypeName("size_t")] nuint n);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void wtf_free(void* p);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_context_create([NativeTypeName("const wtf_context_config_t *")] wtf_context_config_t* config, [NativeTypeName("wtf_context_t **")] wtf_context** context);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void wtf_context_destroy([NativeTypeName("wtf_context_t *")] wtf_context* context);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_context_set_log_level([NativeTypeName("wtf_context_t *")] wtf_context* context, wtf_log_level_t level);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_server_create([NativeTypeName("wtf_context_t *")] wtf_context* context, [NativeTypeName("const wtf_server_config_t *")] wtf_server_config_t* config, [NativeTypeName("wtf_server_t **")] wtf_server** server);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_server_start([NativeTypeName("wtf_server_t *")] wtf_server* server);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_server_stop([NativeTypeName("wtf_server_t *")] wtf_server* server);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_server_state_t wtf_server_get_state([NativeTypeName("wtf_server_t *")] wtf_server* server);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void wtf_server_destroy([NativeTypeName("wtf_server_t *")] wtf_server* server);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_session_close([NativeTypeName("wtf_session_t *")] wtf_session* session, [NativeTypeName("uint32_t")] uint error_code, [NativeTypeName("const char *")] sbyte* reason);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_session_drain([NativeTypeName("wtf_session_t *")] wtf_session* session);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_session_send_datagram([NativeTypeName("wtf_session_t *")] wtf_session* session, [NativeTypeName("const wtf_buffer_t *")] wtf_buffer_t* buffers, [NativeTypeName("uint32_t")] uint buffer_count);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_session_create_stream([NativeTypeName("wtf_session_t *")] wtf_session* session, wtf_stream_type_t type, [NativeTypeName("wtf_stream_t **")] wtf_stream** stream);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_session_state_t wtf_session_get_state([NativeTypeName("wtf_session_t *")] wtf_session* session);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_session_get_peer_address([NativeTypeName("wtf_session_t *")] wtf_session* session, void* address_buffer, [NativeTypeName("size_t *")] nuint* buffer_size);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void wtf_session_set_context([NativeTypeName("wtf_session_t *")] wtf_session* session, void* user_context);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void* wtf_session_get_context([NativeTypeName("wtf_session_t *")] wtf_session* session);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_stream_send([NativeTypeName("wtf_stream_t *")] wtf_stream* stream, [NativeTypeName("const wtf_buffer_t *")] wtf_buffer_t* buffers, [NativeTypeName("uint32_t")] uint buffer_count, [NativeTypeName("_Bool")] byte fin);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_stream_close([NativeTypeName("wtf_stream_t *")] wtf_stream* stream);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_stream_abort([NativeTypeName("wtf_stream_t *")] wtf_stream* stream, [NativeTypeName("uint32_t")] uint error_code);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_stream_get_id([NativeTypeName("wtf_stream_t *")] wtf_stream* stream, [NativeTypeName("uint64_t *")] ulong* stream_id);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void wtf_stream_set_callback([NativeTypeName("wtf_stream_t *")] wtf_stream* stream, [NativeTypeName("wtf_stream_callback_t")] delegate* unmanaged[Cdecl]<wtf_stream_event_t*, void> callback);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void wtf_stream_set_context([NativeTypeName("wtf_stream_t *")] wtf_stream* stream, void* user_context);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void* wtf_stream_get_context([NativeTypeName("wtf_stream_t *")] wtf_stream* stream);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_stream_type_t wtf_stream_get_type([NativeTypeName("wtf_stream_t *")] wtf_stream* stream);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_stream_state_t wtf_stream_get_state([NativeTypeName("wtf_stream_t *")] wtf_stream* stream);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_stream_set_priority([NativeTypeName("wtf_stream_t *")] wtf_stream* stream, [NativeTypeName("uint16_t")] ushort priority);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_stream_set_receive_enabled([NativeTypeName("wtf_stream_t *")] wtf_stream* stream, [NativeTypeName("_Bool")] byte enabled);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("wtf_stream_t *")]
        public static extern wtf_stream* wtf_session_find_stream_by_id([NativeTypeName("wtf_session_t *")] wtf_session* session, [NativeTypeName("uint64_t")] ulong stream_id);
